# UraniumAsync

./: CMakeLists.txt  CMakePresets.json  README.md
Samples/: CMakeLists.txt
Samples/PipesSample/: CMakeLists.txt  main.cpp
Samples/SampleProject/: CMakeLists.txt  main.cpp
UraniumAsync/: CMakeLists.txt
UraniumAsync/Tests/: CMakeLists.txt
UraniumAsync/Tests/Buffers/: ReadOnlySequence.cpp
UraniumAsync/UnAsync/: AsyncEvent.cpp  AsyncEvent.h  SyncWait.h  Task.h  TaskMap.h  Traits.h  WhenAll.h
UraniumAsync/UnAsync/Buffers/: IReadOnlySequenceSegment.h  ReadOnlySequence.h  SequenceReader.h
UraniumAsync/UnAsync/Cancellation/: CancellationSource.cpp  CancellationSource.h  CancellationToken.cpp  CancellationToken.h
UraniumAsync/UnAsync/Internal/: BoolPointer.h  CancellationState.cpp  CancellationState.h  ManualResetEvent.cpp  ManualResetEvent.h  PlatformInclude.h  SyncWaitTask.h  TaskMapAwaiter.h  TaskPromise.h  TaskPromiseBase.h  WhenAllCounter.h  WhenAllReadyAwaiter.h  WhenAllTask.h
UraniumAsync/UnAsync/Jobs/: IJobScheduler.h  Job.h  JobScheduler.cpp  JobScheduler.h  JobTree.h
UraniumAsync/UnAsync/Parallel/: Semaphore.cpp  Semaphore.h  SpinMutex.h
UraniumAsync/UnAsync/Pipes/: Pipe.cpp  Pipe.h  PipeReader.h  PipeResults.h  PipeWriter.h
UraniumAsync/UnAsync/Pipes/Internal/: BufferSegment.h
